v0.5 - Moved tables to separate file. Fixed form spacing issue.

--- a/prettyhowtype.css
+++ b/prettyhowtype.css
@@ -1,6 +1,6 @@
 /*
  * Pretty How Type: A Quick Typography Kit
- * v0.4 // 20130515
+ * v0.5 // 20130515
  * by Bart J Helms / bartjhelms@gmail.com
  * No Rights Reserved.
  *
@@ -65,6 +65,7 @@ body {
     text-align: left;
     word-break: hyphenate;
     text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -173,6 +174,10 @@ em { font-style: italic; }
         line-height: 2.1818em;
     }
 
+.small ul, .small ol, .small dl, .small blockquote {
+    margin: 0 24px 24px;
+}
+
 .pullquote {
     display: block;
     position: relative;
@@ -265,7 +270,7 @@ fieldset fieldset legend {
 }
     label {
         display: inline-block;
-        width: 23.00%;
+        width: 22.00%;
         margin-right: 1%;
     }
 
@@ -304,35 +309,3 @@ input[type="button"] {
     font-size: 1.25em;
     line-height: 1.2em;
 }
-
-/* Tables
-*******************************************************************************/
-
-table { 
-    margin: 0 0 24px;
-    text-align: center;
-}
-
-td, th {  margin: 0; }
-
-th {
-    padding: 6px 11px;
-    font-size: 1.125em;
-    font-weight: 700;
-    line-height: 1.333em;
-    color: white;
-    background-color: black;
-    border-right: 1px dotted white;
-}
-    th:last-of-type { border-right: none; }
-
-td { 
-    padding: 11px;
-    font-family: Verdana, sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5em; /* 24px / 16px; */
-    border: 1px dotted gray;
-}
-    td:first-of-type { border-left: none; }
-    td:last-of-type { border-right: none; }
